--- a/sass/partials/_post.scss
+++ b/sass/partials/_post.scss
@@ -5,6 +5,10 @@
 	&__header {
 		margin-top: 2rem;
 		margin-bottom: 0;
+
+		&-text {
+			margin-bottom: 0;
+		}
 	}
 
 	&__meta {
